<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvAppTitle" android:text="@string/app_title" android:layout_width="wrap_content" android:textSize="25sp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAppTitle"
        android:orientation="vertical"
        android:padding="30dp">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/spotify"
            android:id="@+id/btSpotify"
            android:onClick="launchStreamer"
            style="@style/ButtonStyle"
            />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/scores"
            android:id="@+id/btScores"
            android:onClick="launchScores"
            style="@style/ButtonStyle"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/library"
            android:id="@+id/btLibrary"
            android:onClick="launchLibrary"
            style="@style/ButtonStyle"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/build_it_bigger"
            android:id="@+id/btBuildIt"
            android:onClick="launchBuildIt"
            style="@style/ButtonStyle"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/xyz_string"
            android:id="@+id/btXyzReader"
            android:onClick="launchXyz"
            style="@style/ButtonStyle"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/capstone"
            android:id="@+id/btCapstone"
            android:onClick="launchCapstone"
            style="@style/Capstone"/>
    </LinearLayout>

</RelativeLayout>
